# learning_records

./: .gitignore  README.md
cuda/: CMakeLists.txt  add.cu  get_device_info.cu  hello_world.cu
cuda/include/: util.h
notes/: cuda.md  tensorRT.md  量化.md
